[NO-ISSUE] Remove a stray flex-wrap: wrap in .package-body

--- a/assets/css/package.css
+++ b/assets/css/package.css
@@ -29,7 +29,6 @@
 
 .package-body {
   display: flex;
-  flex-wrap: wrap;
 
   a {
     font-weight: 500;
