--- a/assets/css/release-readme.css
+++ b/assets/css/release-readme.css
@@ -1,6 +1,5 @@
 .release-readme-column {
   margin: 0 2em;
-  overflow: auto;
   flex-basis: 40rem;
   order: 2;
 }
